--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
    android:layout_height="fill_parent"
    >
 <ListView
-    android:id="@+id/android:list"
+    android:id="@+id/list_experiments"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     />
