--- a/res/menu/action_bar_share_menu.xml
+++ b/res/menu/action_bar_share_menu.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" 
-    >
+<menu 
+    xmlns:myapp="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
         android:id="@+id/menu_item_share"
-        android:actionProviderClass="android.widget.ShareActionProvider"
-        android:showAsAction="ifRoom"
+		myapp:actionProviderClass="android.support.v7.widget.ShareActionProvider"
+        myapp:showAsAction="always"
         android:title="@string/share_title" />
 
 </menu>
